# bananaforge-launcher

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bootstrap/: __init__.py  bootstrap_window.py  installer.py  main.py  orchestrator.py  release_client.py  rollback.py  secure_download.py
compatibility/: compatibility.json
desktop/: main.js  package-lock.json  package.json  preload.js
desktop/renderer/: app.js  index.html  styles.css
docs/: architecture.md  development.md  first-run.md  installation.md  profiles.md  research.md  safe-mode.md  storefront-support.md  troubleshooting.md  updates.md
installer/: BananaForgeBootstrap.iss  BananaForgeLauncher.iss  BananaForgeSafe.iss  Install-BananaForge.ps1
launcher/: __init__.py  app.py  constants.py  main.py
launcher/models/: __init__.py  compatibility.py  core.py  instance.py  mod.py  profile.py  release.py  settings.py
launcher/services/: __init__.py  backup_manager.py  compatibility_manager.py  dependency_manager.py  diagnostics.py  download_manager.py  game_copy.py  game_detection.py  game_validation.py  github_client.py  installation_tester.py  instance_manager.py  integrity.py  launch_manager.py  library_store.py  logging_service.py  melonloader_manager.py  mod_catalogue.py  mod_helper_manager.py  mod_manager.py  notification_service.py  official_path_manager.py  profile_manager.py  recovery_manager.py  (+7 more)
scripts/: __init__.py  build.ps1  build_assets.py  generate_release_manifest.py
tests/: test_core_services.py  test_services.py
(+3 files in other folders)
