[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bananforge-launcher"
version = "0.1.0"
description = "Safety-first BTD6 mod instance manager"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27,<1", "platformdirs>=4,<5", "pydantic>=2.7,<3", "packaging>=24,<26", "keyring>=25,<26", "psutil>=5.9,<8"]

[project.optional-dependencies]
ui = ["PySide6>=6.7,<7"]
dev = ["pytest>=8,<9", "ruff>=0.6,<1", "mypy>=1.10,<2"]

[project.scripts]
bananaf = "launcher.main:main"
bananaf-bootstrap = "bootstrap.main:main"

[tool.setuptools.packages.find]
include = ["launcher*", "bootstrap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests"]
